Tue Aug 17 15:26:12 BST 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Autoconf 2.67.

Tue Aug 17 14:29:53 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display_catman): Add iconv to format_cmd before adding
	  a compressor.
	* NEWS: Document this.

Tue Aug 17 14:22:06 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (add_output_iconv): Make static.

Tue Jul 20 08:18:41 BST 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20100704.

	* configure.ac (AM_GNU_GETTEXT_VERSION): Upgrade to gettext 0.18.1.

Wed May 19 12:38:31 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/descriptions.c (parse_descriptions): Free record.
	* src/encodings.c (check_preprocessor_encoding): Free directive.
	  (manconv_stdin): Free p.
	* src/lexgrog_test.c (main): Free lg.filters and lg.whatis.

Thu May 13 11:45:02 CEST 2010  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon May 10 09:42:41 CEST 2010  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Sun May  9 07:37:14 BST 2010  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.8-pre1.
	* release.sh: Remove man/po4a/po/man-db-manpages.pot before running
	  'make distcheck', to force it to be regenerated with the current
	  version number.
	* man/po4a/Makefile.am: Make po/man-db-manpages.pot depend on
	  update-po, rather than using dist-hook which is too late.
	* po/man-db.pot, po/*.po: Update.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.

Sat May  8 15:39:49 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/filenames.c (filename_info): Explicitly fail if the extension
	  is zero-length.

Sat May  8 15:35:17 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/filenames.c (filename_info): Allow section and extension to
	  differ as long as the first character is the same.  (This is my
	  understanding of what the code was originally meant to do, but it