@@ -1,3 +1,8 @@
+Tue Aug 17 15:31:38 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* man/po4a/Makefile.am (clean-local): Make sure not to change PO or
+	  POT files when removing generated translations.
+
 Tue Aug 17 15:26:12 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Autoconf 2.67.
